Fixed comment section wrapping content

--- a/style.css
+++ b/style.css
@@ -281,9 +281,10 @@ body {
 /* Reviews */
 .reviews {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 10%;
+    gap: 5%;
 }
 .reviews .card {
     text-align: center;
